<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:background="#05041C"
    tools:context="com.example.climatecast.activity.AddLocationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="10dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/etSearchCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#FFFFFF"
            android:hint="@string/hint_search" >

        </EditText>

        <Button
            android:id="@+id/SearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"         
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/Search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4"     
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvsearchCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/DoneBtn"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="23dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="gone"
        android:textColor="#FFFFFF"
        android:text="@string/Done" />

</LinearLayout>
