<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05041C"
    tools:context="com.example.climatecast.LoginFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textColor="#FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textColor="#FFFFFF"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonCreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonLogin"
            android:layout_below="@+id/buttonLogin"
            android:textColor="#FFFFFF"
            android:text="@string/new_account" />

        <ImageView
            android:id="@+id/ivDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:src="@drawable/ic_dev" />

        <TextView
            android:id="@+id/tvDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:textColor="#FFFFFF"
            android:text="Who are developers??" />

    </RelativeLayout>

</FrameLayout>
