<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/Temperature" />

            <SeekBar
                android:id="@+id/seekBarTemp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0" />

            <SeekBar
                android:id="@+id/seekBarTemp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="45" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:text="@string/Duration" />

            <SeekBar
                android:id="@+id/seekBarDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp" >

                <TextView
                    android:id="@+id/TVRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="20dp"
                    android:text="@string/Rain" />

                <ToggleButton
                    android:id="@+id/tbRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>